Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/environment/round/ErroneousAnnotations.out
ErroneousAnnotations.java:10:2: compiler.err.cant.resolve: kindname.class, Undefined, , 
ErroneousAnnotations.java:12:6: compiler.err.cant.resolve.location: kindname.class, Undefined, , , (compiler.misc.location: kindname.class, ErroneousAnnotations, null)
2 errors
